<resources>
    <string name="app_name">Docebo Test</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search a GitHub user</string>
    <string name="app_label">Docebo Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Profile">Profile</string>
    <string name="Repositories">Repositories</string>
    <string name="email_label">Email:</string>
    <string name="location_label">Location:</string>
    <string name="profile_url_label">Profile Url:</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="create_date">Create Date</string>
    <string name="push_date">Push Date</string>
    <string name="last_updated">Last Updated</string>
    <string name="home_empty_result">Couldn\'t find any users matching \"%s\"</string>
    <string name="repository_empty_text">This user has no repositories</string>
    <string name="search_user">Search Users…</string>
    <string name="home">Home</string>
    <string name="internet_disconnected">Please check your network connection</string>
</resources>