<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="com.kmozcan1.docebotest.domain.enums.SortType"/>
        <variable name="repositoriesFragment" type="com.kmozcan1.docebotest.presentation.ui.RepositoriesFragment"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Theme.MaterialComponents.BottomSheetDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/sortAlphaButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/alphabetical"
            android:onClick="@{() -> repositoriesFragment.onBottomSheetButtonClick(SortType.ALPHABETIC)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sortCreateButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/create_date"
            android:onClick="@{() -> repositoriesFragment.onBottomSheetButtonClick(SortType.CREATE_DATE)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortAlphaButton" />

        <Button
            android:id="@+id/sortPushButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/push_date"
            android:onClick="@{() -> repositoriesFragment.onBottomSheetButtonClick(SortType.PUSH_DATE)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortCreateButton" />

        <Button
            android:id="@+id/sortUpdatedButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/last_updated"
            android:onClick="@{() -> repositoriesFragment.onBottomSheetButtonClick(SortType.LAST_UPDATED)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortPushButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>